// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cards should create a default 2 column cards list 1`] = `
<div>
  <ul
    style="display: grid; grid-template-columns: repeat(2, 1fr);"
  >
    <li
      class="card"
    >
      <h1>
        1
      </h1>
    </li>
    <li
      class="card"
    >
      <h1>
        2
      </h1>
    </li>
    <li
      class="card"
    >
      <h1>
        3
      </h1>
    </li>
    <li
      class="card"
    >
      <h1>
        4
      </h1>
    </li>
    <li
      class="card"
    >
      <h1>
        5
      </h1>
    </li>
    <li
      class="card"
    >
      <h1>
        6
      </h1>
    </li>
    <li
      class="card"
    >
      <h1>
        7
      </h1>
    </li>
    <li
      class="card"
    >
      <h1>
        8
      </h1>
    </li>
  </ul>
</div>
`;

exports[`Cards should create a default four column cards list 1`] = `
<div>
  <ul
    style="display: grid; grid-template-columns: repeat(4, 1fr);"
  >
    <li
      class="card"
    >
      <h1>
        1
      </h1>
    </li>
    <li
      class="card"
    >
      <h1>
        2
      </h1>
    </li>
    <li
      class="card"
    >
      <h1>
        3
      </h1>
    </li>
    <li
      class="card"
    >
      <h1>
        4
      </h1>
    </li>
    <li
      class="card"
    >
      <h1>
        5
      </h1>
    </li>
    <li
      class="card"
    >
      <h1>
        6
      </h1>
    </li>
    <li
      class="card"
    >
      <h1>
        7
      </h1>
    </li>
    <li
      class="card"
    >
      <h1>
        8
      </h1>
    </li>
  </ul>
</div>
`;
